--- a/frontend/src/pages/ResourcesNotFound.css
+++ b/frontend/src/pages/ResourcesNotFound.css
@@ -1,3 +1,12 @@
+.resources-not-found-page {
+  height: 100vh;
+  overflow: hidden;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+}
+
 .resources-home-button {
   display: inline-block;
   margin-top: 16px;
